--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +18,12 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  align-self: center;
+  justify-self: center;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
@@ -22,4 +32,7 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  
+  
+
 }
