--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
 }
 
 .profile-image {
@@ -20,6 +24,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-right: 10px;
 }
 
 .logo {
@@ -27,6 +32,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  justify-self: flex-start;
+  margin-left: 10px;
 }
 
 button {
@@ -41,8 +48,30 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  
+}
+
+.links{
+  display: flex;
+  justify-content: space-around;
+  gap: 16px;
+  padding-left: 20px;
 }
 
 ul {
   list-style-type: none;
+  justify-content: space-between;
+}
+
+.notifications{
+  display: flex;
+}
+
+.end{
+  display: flex;
+  gap: 10px;
+}
+
+.start{
+  display: flex;
 }
